--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
         <script src="app.js" charset="utf-8"></script>
         <link rel="stylesheet" href="style.css">
         <title>Snake Tutorial</title>
@@ -8,7 +9,6 @@
     <body>
         <button class="start">Start/Restart</button>
         <div class="score">Score:<span>0</span></div>      
-
         <div class="grid"> 
             <div></div>
             <div></div>
