--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <button class="start">Start/Restart</button>
             <div class="score">Score:<span>0</span></div>      
 
-            <div class="grid"> 
+            <div class="grid container"> 
                 <div></div>
                 <div></div>
                 <div></div>
