--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
         <link rel="stylesheet" href="style.css">
         <title>Snake Tutorial</title>
     </head>
-    <body>
-        <button class="start">Start/Restart</button>
+    <body class="game">
         <div class="score">Score:<span>0</span></div>      
-
         <div class="grid"> 
             <div></div>
             <div></div>
@@ -112,5 +110,12 @@
             <div></div>
             <div></div>
         </div>
+	<div class="keys">
+	  <span id="key-38" class="key key-up">&#60;</span>
+	  <span id="key-37" class="key key-left">&#60;</span>
+	  <span id="key-39" class="key key-right">&#60;</span>
+	  <span id="key-40" class="key key-down">&#60;</span>
+	</div>
+        <button class="start">Start / Restart</button>      
     </body>
 </html>
